--- a/Code/index.html
+++ b/Code/index.html
@@ -291,7 +291,7 @@
                         </div>
                     </div>
                     <div class="footer-col-2">
-                        <img src="images\chef-cap.png" alt="" >
+                        <img src="images\chef-cap.png" alt="A chef's hat" >
                         <p>The purpose of this business</p>
                     </div>
                     <div class="footer-col-3">
