brought back the script code

--- a/Code/index.html
+++ b/Code/index.html
@@ -317,7 +317,7 @@
                 <p class="copyright">Copyright 2021- Limzy</p>
             </div>
         </div>
-        <!-- <script>
+        <script>
             var menuitem = document.getElementById("menuitem");
             menuitem.style.maxHeight = "0px";
 
@@ -331,7 +331,7 @@
                 }    
             }
 
-        </script> -->
+        </script>
 
 
  
