--- a/Code/products.html
+++ b/Code/products.html
@@ -22,8 +22,8 @@
                     <li><a href="">Account</a></li>
                 </ul>
             </nav>
-            <img src="C:\Users\HP\Downloads\Muslimah\E-commerce Website\images\benz.png" alt="" width="30px" height="30px">
-            <img src="C:\Users\HP\Downloads\Muslimah\E-commerce Website\images\toyota.png" class="menu-icon" onclick="menutoggle()" alt="">
+            <img src="images\benz.png" alt="" width="30px" height="30px">
+            <img src="images\toyota.png" class="menu-icon" onclick="menutoggle()" alt="">
         </div>
     </div>
    
@@ -40,7 +40,7 @@
         </div>
            <div class="row">
                <div class="col-4">
-                   <img src="C:\Users\HP\Downloads\Muslimah\E-commerce Website\images\kt-6.jpg" alt="">
+                   <img src="images\kt-6.jpg" alt="">
                    <h4>Insulated Serving Dish Hot Pot</h4>
                    <div class="rating">
                         <i class="fa fa-star"></i>
@@ -52,7 +52,7 @@
                    <p>$15.00</p>
                </div>
                <div class="col-4">
-                <img src="C:\Users\HP\Downloads\Muslimah\E-commerce Website\images\kt-7.jpg" alt="">
+                <img src="images\kt-7.jpg" alt="">
                 <h4>Large Over Sink Dish Drying Rack & Kitchen Holder Shelf</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -63,7 +63,7 @@
                 </div>
                 <p>$25.35</p>
                 </div>
-               <div class="col-4"><img src="C:\Users\HP\Downloads\Muslimah\E-commerce Website\images\kt-8.jpg" alt="">
+               <div class="col-4"><img src="images\kt-8.jpg" alt="">
                 <h4>4pcs/set Gas Stove Reusable Protection Pad For Gas Burners</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -74,7 +74,7 @@
                 </div>
                 <p>$15.79</p>
                 </div>
-               <div class="col-4"><img src="C:\Users\HP\Downloads\Muslimah\E-commerce Website\images\kt-20.jpg" alt="">
+               <div class="col-4"><img src="images\kt-20.jpg" alt="">
                     <h4>Set of Wooden Spoons</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
@@ -88,7 +88,7 @@
             </div>
             <div class="row">
                 <div class="col-4">
-                   <img src="C:\Users\HP\Downloads\Muslimah\E-commerce Website\images\kt-19.jpg" alt="">
+                   <img src="images\kt-19.jpg" alt="">
                    <h4> Pepper Grinder</h4>
                    <div class="rating">
                         <i class="fa fa-star"></i>
@@ -100,7 +100,7 @@
                    <p>$8.90</p>
                </div>
                <div class="col-4">
-                    <img src="C:\Users\HP\Downloads\Muslimah\E-commerce Website\images\kt-10.jpg" alt="">
+                    <img src="images\kt-10.jpg" alt="">
                     <h4>Wet Basket Vegetables Fruits Slicer/Cutter/Drainer</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
@@ -112,7 +112,7 @@
                     <p>$5.30</p>
                 </div>
                <div class="col-4">
-                <img src="C:\Users\HP\Downloads\Muslimah\E-commerce Website\images\kt-11.jpg" alt="">
+                <img src="images\kt-11.jpg" alt="">
                     <h4>Salt Shaker & Pepper Grinder Stainless Steel</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
@@ -124,7 +124,7 @@
                     <p>$6.99</p>
                 </div>
                <div class="col-4">
-                <img src="C:\Users\HP\Downloads\Muslimah\E-commerce Website\images\kt-12.jpg" alt="">
+                <img src="images\kt-12.jpg" alt="">
                     <h4>6pcs Cooking Spoon Set With Wall Hanger</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
@@ -138,7 +138,7 @@
             </div>
             <div class="row">
                 <div class="col-4">
-                    <img src="C:\Users\HP\Downloads\Muslimah\E-commerce Website\images\kt-13.jpg" alt="">
+                    <img src="images\kt-13.jpg" alt="">
                     <h4>Non Stick Pancake Maker</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
@@ -150,9 +150,9 @@
                     <p>$12.99</p>
                 </div>
                 <div class="col-4">
-                        <img src="C:\Users\HP\Downloads\Muslimah\E-commerce Website\images\kt-14.jpg" alt="">
+                        <img src="images\kt-14.jpg" alt="">
                         <h4>Highly Absorbent Kitchen Towel- Set Of 12 </h4>
-                        <div class="rating"/> 
+                        <div class="rating"> 
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
@@ -161,7 +161,7 @@
                         </div>
                         <p>$5.50</p>
                 </div>
-                <div class="col-4"><img src="C:\Users\HP\Downloads\Muslimah\E-commerce Website\images\kt-15.jpg" alt="">
+                <div class="col-4"><img src="images\kt-15.jpg" alt="">
                      <h4>Stainless Steel Mixing Bowl Set Of 4</h4>
                      <div class="rating">
                         <i class="fa fa-star"></i>
@@ -172,7 +172,7 @@
                      </div>
                      <p>$7.00</p>
                 </div>
-                <div class="col-4"><img src="C:\Users\HP\Downloads\Muslimah\E-commerce Website\images\kt-16.jpg" alt="">
+                <div class="col-4"><img src="images\kt-16.jpg" alt="">
                      <h4>Super Quick Kitchen Knife Sharpener-Bavarian Edge</h4>
                      <div class="rating">
                         <i class="fa fa-star"></i>
